style.css
html {  
  font-size: 16px;
}

body {
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  color: #738287;
}

.section {
  padding: 1rem 0;
}

.section .section-header {
  position: relative;
  margin: 0 3rem;
  display: flex;
  flex-wrap: wrap;
}

.section .section-title {
  margin: 0;
  font-size: 2.5rem;
  font-weight: 200;
}

.section-here .update-location {
  position: absolute;
  align-self: center;
  border-radius: .2rem;
  border: none;
  background-color: #c9d2d7;
  outline: none;
}

.section-here .update-location:not(.small) {
  left: 50%;
  transform: translate(-50%, 0);
  padding: 1rem 2.5rem;
  color: #8e999f;
  font-weight: 700;
}

.section-here .update-location.small {
  display: none;
  right: 0;
}

.section-here .update-location.small img {
  height: 3rem;
}

.section-favorites .add-city {
  position: absolute;
  align-self: center;
  right: 0;
  display: flex;
  align-items: center;
}

.section-favorites .add-city input {
  border: none;
  background-color: #f1f1f1;
  border-radius: .2rem;
  padding: .7rem 1rem;
  outline: none;
  flex: 1 1;
}

.section-favorites .add-city button {
  width: 2rem;
  height: 2rem;
  border: none;
  outline: none;
  border-radius: 50%;
  background-color: #718287;
  color: white;
  text-align: center;
  line-height: 2rem;
  margin-left: .5rem;
}

.section-content {
  display: flex;
  position: relative;
  flex-wrap: wrap;
  padding: 0;
}

.section .loader {
  display: none;
  width: 100%;
  font-size: 5rem;
  text-align: center;
}

.section.loading .loader {
  display: block;
}

.section.loading .section-content {
  display: none;
}

.weather {
  width: 50%;
  font-family: sans-serif;
  padding: 1rem 3rem;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.weather-header {
  display: flex;
  position: relative;
  align-items: center;
}

.weather-city {
  margin: 0;
  font-size: 2rem;
  max-width: 50%;
}

.weather-temperature {
  font-size: 2.5rem;
  margin-left: 3rem;
}

.weather-icon {
  height: 6rem;
  margin: -2rem;
  margin-left: 1rem;
}

.weather-remove {
  position: absolute;
  right: 0;
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  background-color: #718287;
  color: white;
  text-align: center;
  line-height: 2rem;
}

.weather-list {
  list-style: none;
  position: relative;
  margin: 0;
  padding: 0;
}

.weather-list > li {
  width: 100%;
  background-color: #738287;
  color: white;
  margin: .5rem 0;
  display: flex;
  justify-content: space-between;
  padding: .7rem;
  box-sizing: border-box;
}

.weather-list > li .title {
  font-weight: 700;
}

.weather-here {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex: 1 1;
}

.weather-here .weather-icon {
  margin: 0;
  height: 16rem;
  margin: -3rem;
}

.weather-here .weather-temperature {
  font-size: 7rem;
}

@media screen and (max-width: 768px) {
  html {
    font-size: 12px;
  }

  .weather {
    width: 100%;
  }
  
  .section-favorites .add-city {
    position: relative;
    width: 100%;
    margin-top: 1rem;
  }

  .section-here .update-location:not(.small) {
    display: none;
  }
  
  .section-here .update-location.small {
    display: block;
  }

  .weather-temperature {
    font-size: 2rem;
    margin-left: 1rem;
  }
}

@media screen and (max-width: 375px) {
  html {
    font-size: 11px;
  }

  .weather-icon {
    height: 4rem;
    margin: -1rem;
    margin-left: 0;
  }
}

